--- a/blog.html
+++ b/blog.html
@@ -143,7 +143,9 @@
         </div>
       </div>
     </div>
+    <footer>
+      Copyright &#169; Kim Nguyen 2019
+    </footer>
   </section>
-
 </body>
 </html>
