--- a/home.html
+++ b/home.html
@@ -351,7 +351,7 @@
                 <div class="timeline">
                   <span class="icon fas fa-user-tie"></span>
                   <div class="timeline-content">
-                    <h3 class="title">Front-end Portfolio
+                    <h3 class="title">Portfolio/Blog
                         <a href="https://ktnguyen.herokuapp.com/"
                            target="_blank"><img class="hide-on-450" src="img/heroku-32x32.png"
                                                 alt="heroku icon">
