fix queries media view

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Kim Nguyen Portfolio Webpage"/>
   <meta property="og:description" content="Kim Nguyen Portfolio Webpage"/>
   <meta name="keywords"
-        content="web design, web design blog, web dev design, Kim Nguyen, Queen City Cincinnati Ohio OH, Kim Nguyen Portfolio, Kim Nguyen Resume, Resume, Software Developer Resume">
+        content="web design, web design blog, web dev design, Kim Nguyen, Queen City Cincinnati Ohio OH, Kim Nguyen Portfolio, Kim Nguyen Resume, Resume, Software Developer Resume, host java web application with postgreSQL database to Heroku, Java EE, Java Web Enterprise">
 
   <!-- ------------------------------Favicon ------------------------- -->
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -92,9 +92,9 @@
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
           <p class="main-blog-desc">
-            <img src="img/blog.jpg" alt=""><br>
-            COMING <a
-            href="">Read
+            <img src="img/blog2.jpg" alt=""><br>
+            Java Web App with PostgreSQL Database hosted on Heroku. <a
+            href="blog\2019\05\19\heroku-java-web-app-postgresql.html">Read
                     more</a></p>
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
