--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
       </div>
 
         <!-- -----------------------Live Editor----------------------------->
-      <section id="portfolio-s1" class="section">
+      <section id="portfolio-s1" class="section bg-gra">
         <div class="container-fluid">
           <div class="row align-items-center justify-content-center">
             <h1
@@ -185,7 +185,7 @@
         </div>
       </section>
       <!----------------------- Experience and Education Section ----------------------->
-      <section id="portfolio-edu-exp" class="section">
+      <section id="portfolio-edu-exp" class="section bg-gra">
         <div class="container-fluid">
           <div class="row align-items-center justify-content-center">
             <h2 class="section-head">
