--- a/blog.html
+++ b/blog.html
@@ -99,9 +99,9 @@
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
           <p class="main-blog-desc">
-            <img src="img/blog.jpg" alt=""><br>
-            COMING <a
-            href="">Read
+            <img src="img/blog3.jpg" alt=""><br>
+            Which one should I use ? <br> == or === / let or const ?<a
+            href="blog\2019\05\20\javascript-should-I-use-==-or-===.html"><br>Read
                     more</a></p>
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
