--- a/blog.html
+++ b/blog.html
@@ -106,9 +106,9 @@
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
           <p class="main-blog-desc">
-            <img src="img/blog.jpg" alt=""><br>
-            COMING <a
-            href="">Read
+            <img src="img/blog4.jpg" alt=""><br>
+            How to install SQLServer19 w/ AdventureWorks19 sample database <a
+            href="blog\2019\05\21\how-to-install-and-configure-sql-server-2019-with-4.6.2-.NET-framework-on-windows-10.html">Read
                     more</a></p>
         </div>
       </div>
