add page logo image 300x300

--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,11 @@
     <link rel="canonical" href="https://ktnguyen.herokuapp.com/"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:type" content="website"/>
+  <meta property="og:image" content="https://res.cloudinary.com/dnw6i7lsh/image/upload/v1558643955/Portfolio/knguyen-300x300-logo_txclml.jpg" />
+  <meta property="og:image:secure_url" content="https://res.cloudinary.com/dnw6i7lsh/image/upload/v1558643955/Portfolio/knguyen-300x300-logo_txclml.jpg" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="300" />
+  <meta property="og:image:height" content="300" />
     <meta property="og:title" content="Kim Nguyen Portfolio Webpage"/>
     <meta property="og:description" content="Kim Nguyen Portfolio Webpage"/>
     <meta name="keywords"
