--- a/blog.html
+++ b/blog.html
@@ -120,9 +120,9 @@
       <div class="row align-items-baseline justify-content-center">
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
           <p class="main-blog-desc">
-            <img src="img/blog.jpg" alt=""><br>
-            COMING <a
-            href="">Read
+            <img src="img/blog5.jpg" alt=""><br>
+            Maven/web-app archetype with JSP/Servlet - IntelliJ IDEA <a
+            href="blog\2019\05\24\how-to-create-maven-java-servlet-jsp-archetype-webapp.html">Read
                     more</a></p>
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
