add new blog about spring boot

--- a/blog.html
+++ b/blog.html
@@ -127,9 +127,9 @@
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
           <p class="main-blog-desc">
-            <img src="img/blog.jpg" alt=""><br>
-            COMING <a
-            href="">Read
+            <img src="img/blog6.jpg" alt=""><br>
+            Spring Boot - Thymeleaf - JPA - Maven - IntelliJ - Java Web Application <a
+            href="blog\2019\05\25\how-to-create-a-web-application-with-spring-boot-thymeleaf-jpa-maven.html">Read
                     more</a></p>
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
