added new software testing blog date 5-28-2019

--- a/blog.html
+++ b/blog.html
@@ -82,9 +82,6 @@
       <div class="row align-items-center justify-content-center">
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12  align-items-center justify-content-center">
           <h1><i class="fas fa-bug"></i> Bugs Blog</h1>
-          <p>
-            The problems I encountered and solved while learning to program as a Junior Dev
-          </p>
         </div>
       </div>
       <div class="row align-items-baseline justify-content-center">
@@ -134,9 +131,9 @@
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
           <p class="main-blog-desc">
-            <img src="img/blog.jpg" alt=""><br>
-            COMING <a
-            href="">Read
+            <img src="img/blog7.jpg" alt=""><br>
+            Software Testing training video list <a
+            href="blog\2019\05\28\software-testing-video-list-training.html">Read
                     more</a></p>
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-2 col-xl-2">
