--- a/home.html
+++ b/home.html
@@ -127,12 +127,12 @@
                 <tr>
                   <th scope="row">Front-end</th>
                   <td>Object-Oriented Design, JSP/Servlet, JavaScript (Node.js), TypeScript, HTML5,
-                      CSS3/Bootstrap, jQuery, Angular 4</td>
+                      CSS3/Bootstrap4, jQuery, Angular4-7</td>
                   <td class="text-center hide-on-450">3+</td>
                 </tr>
                 <tr>
-                  <th scope="row">Back-end</th>
-                  <td>Java 8-12, Spring GUI</td>
+                  <th scope="row">Java EE & Swing UI</th>
+                  <td>Java 8-12, Swing GUI</td>
                   <td class="text-center hide-on-450">2+</td>
                 </tr>
                 <tr>
@@ -170,7 +170,7 @@
                 </tr>
                 <tr>
                   <th scope="row">Experience</th>
-                  <td>Manual & Automation Testing, Data Analysis</td>
+                  <td>Manual Testing, Data Analysis</td>
                   <td class="text-center hide-on-450">3+</td>
                 </tr>
                 <tr>
@@ -268,32 +268,6 @@
               <table class="table table-responsive{-sm|-md|-lg|-xl}">
                 <thead class="thead-light">
                 <tr>
-                  <th scope="col">QA/Technical Consultant - Vertex (Cincinnati
-                                  Financial Co.'s Contractor) - Fairfield, OH - 03/2019 - current</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                  <td>&#187; Performed Interface Functional Testing on web-based
-                      system
-                      (Diamond) on all PLB that CIC and CCC service with 3rd party
-                      vendor systems to ensure systems interchange data correctly.
-                      Defect/Bug Triage, diagnosed, debugged, and reproduced
-                      Defect/Bug Triage, diagnosed, debugged, and reproduced
-                      defects when Diamond interacted with 3rd party vendor
-                      systems.</td>
-                </tr>
-                <tr>
-                  <td>&#187; Created, tested, modified, and maintained test
-                      script/design
-                      procedures and test cases in Test Plan, Test Lab (Manual &
-                      Automation (utilized VNC lab machines), & Defect modules in HP Quality Center using DOORS. Collaborated with BA’s, Dev’s, QA’s to review new requirements/CRs and to plan for project’s upcoming release.</td>
-                </tr>
-                </tbody>
-              </table>
-              <table class="table table-responsive{-sm|-md|-lg|-xl}">
-                <thead class="thead-light">
-                <tr>
                   <th scope="col">QA/Data Analyst - Thrive Impact Sourcing
                                               (CareSource's Contractor) - Cincinnati, OH - 10/2016 -
                                               07/2017</th>
@@ -318,7 +292,7 @@
                 <thead class="thead-light">
                 <tr>
                   <th scope="col">Receptionist/Customer Service - L&T Salon -
-                                  Hamilton, OH - 10/2010 - 03/2019</th>
+                                  Hamilton, OH - 10/2010 - 06/2019</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -362,8 +336,8 @@
                     </h3>
                     <p class="description">
                       <ul class="hide-on-small">
-                        <li>Technology: HTML5, CSS3, Bootstrap CDN 3&4, ACE, jQuery, JavaScript</li>
-                        <li>IDE: WebStorm 2019.1, Adobe Photoshop CC 2019, Chrome/JetBrain IDE Support</li>
+                        <li>Technology: HTML5, CSS4, Bootstrap4, ACE, jQuery, JavaScript</li>
+                        <li>IDE: WebStorm 2019.1, Photoshop CC 2019, Chrome/JetBrain IDE Support</li>
                       </ul>
                   </div>
                 </div>
