--- a/resume.html
+++ b/resume.html
@@ -171,11 +171,11 @@
                         </tr>
                         <tr class="striped-color">
                             <td>Front-end:</td>
-                            <td>JSP/Servlet, JavaScript (Node.js), TypeScript, HTML5, CSS3/Bootstrap, jQuery, Angular 4</td>
+                            <td>JSP/Servlet, HTML5, CSS4/Bootstrap4, Template Engine (Thymeleaf)</td>
                         </tr>
                         <tr>
                             <td>Back-end:</td>
-                            <td>Java 8-12, Spring Boot</td>
+                            <td>Java 8-11, Swing GUI, Spring Boot, Maven, JDBC</td>
                         </tr>
                         <tr class="striped-color">
                             <td>Database:</td>
@@ -199,7 +199,7 @@
                         </tr>
                         <tr>
                             <td>Experience:</td>
-                            <td>Manual & Automation Testing, Data Analysis</td>
+                            <td>Manual Testing, Data Analysis</td>
                         </tr>
                         <tr class="striped-color">
                             <td>Familiar:</td>
@@ -220,31 +220,6 @@
                 </div>
 
                 <div class="sectionContent">
-                    <article>
-                        <h2>QA/Technical Consultant - Vertex (Cincinnati Financial Co.’s contractor),
-                            Fairfield OH</h2>
-                        <p class="subDetails">March 2019 - current</p>
-                        <p>
-                            <ul>
-                                <li>
-                                    <p style="display: inline;">Performed Interface Functional Testing on web-based automated processing system (Diamond) on all personal lines of business that CIC and CCC service with 3rd party vendor systems to ensure systems interchange data correctly.
-                                    </p>
-                                </li>
-                                <li>
-                                    <p style="display: inline;">Collaborated with internal resources (Business, BA’s, Dev’s, QA’s) to review new requirements/CRs and to plan for project’s upcoming release (utilized DOORS and HP Quality Center).
-                                    </p>
-                                </li>
-                                <li>
-                                    <p style="display: inline;">Defect/Bug Triage, diagnosed, debugged, and reproduced defects when Diamond interacted with 3rd party vendor systems (LexisNexis, Geocode, CMS, etc.).
-                                    </p>
-                                </li>
-                                <li>
-                                    <p style="display: inline;">Created, tested, modified, and maintained test script/design procedures and test cases in Test Plan, Test Lab (Manual & Automation (utilized VNC lab machines), & Defect modules in HP Quality Center using DOORS.
-                                    </p>
-                                </li>
-                            </ul>
-                        </p>
-                    </article>
                     <article>
                         <h2>Software QA Tester/Data Analyst at Thrive Impact Sourcing (CareSource's
                             contractor), Cincinati OH</h2>
@@ -281,7 +256,7 @@
                     </article>
                     <article>
                         <h2>Receptionist/Customer Service at L&T Salon, Hamilton OH</h2>
-                        <p class="subDetails">October 2010 - March 2019</p>
+                        <p class="subDetails">October 2010 - June 2019</p>
                         <p>
                             <ul>
                                 <li>
